[fix] Overlapping error text msg

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -83,7 +83,6 @@ $position-top: ($checkbox-size - $checkbox-inner-tick-height) / 2 - 1.5 * ($chec
     display: flex;
     font-size: $medium;
     line-height: $space-3;
-    height: $space-3;
     padding-left: $space-2;
     color: $text-color-2;
     font-weight: $weight-regular;
